兼容新sdk，支持mysql作为数据存储

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /ev_plugin_build.exe
 /ev_plugin_zip.exe
 /cmd/test/
+/dist/0_0_10/plugin.zip
+/dist/0_0_9/plugin.zip
+/dist/source_code.zip
+/plugin.exe
